--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,32 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+} */
+
+
+.header {
+  width: 100%;
+  height: 4em;
+  background-color: coral;
+  text-align: center;
+  padding-top: 10%;
+  color: black;
+  border-radius: 20px;
 }
+
+input {
+  width: 60%;
+  height: 2em;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  background-color: #f5hf8f;
+  padding: 10px;
+  margin: 10px;
+}
+
 
 .ar {
   background-color: #e24e7a;
